<resources>
    <string name="app_name">LoginPrivacy</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_dob">DOB</string>
    <string name="text_phone_no">Phone no</string>
    <string name="texte_mail">Email</string>
    <string name="ext_password">Password</string>
    <string name="title_activity_sign_in">Edit Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_logout">Logout</string>
    <string name="string_music">music</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_first_name">Enter First Name</string>
    <string name="error_message_last_name">Enter Last Name</string>
    <string name="error_message_date_of_birth">Enter Date Of Birth</string>
    <string name="error_message_Gender">Select Gender</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_phone">Enter Phone Number</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="appbar_scrolling_view_behavior">asvb</string>
    <string name="hint_email">mail</string>
    <string name="hint_password">password</string>
    <string name="text_accounts">All Accounts</string>
    <string name="logout">logout</string>
    <string name="text_login">login</string>
</resources>
