<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:padding="@dimen/dimen_20dp"
    android:background="@drawable/blackreg"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="18.0">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_marginLeft="0dp"
                android:background="@drawable/img"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutFirstName"
            android:layout_weight="4.0"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextFirstName"
                android:hint="@string/text_first_name"
                android:maxLines="1"
                android:backgroundTint="@color/white"

                android:inputType="text"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutLastName"
            android:layout_weight="4.0"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextLastName"
                android:backgroundTint="@color/white"

                android:hint="@string/text_last_name"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutDOB"
            android:layout_weight="4.0"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextDOB"
                android:backgroundTint="@color/white"
                android:hint="@string/text_dob"
                android:maxLines="1"
                android:inputType="text"
                android:drawableTint="@color/white"
                android:drawableRight="@drawable/ic_date_picker"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutPhoneNo"
            android:layout_weight="4.0"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextPhoneNo"
                android:backgroundTint="@color/white"
                android:hint="@string/text_phone_no"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutEmail"
            android:layout_weight="4.0"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextEmail"
                android:hint="@string/texte_mail"
                android:maxLines="1"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutPassword"
            android:layout_weight="4.0">
            <!--app:passwordToggleEnabled="true"-->
            <!--app:passwordToggleTint="@color/white"-->

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextPassword"
                android:hint="@string/ext_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/white"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:textSize="18dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/button_states_reg"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="Register" />

    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>