<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagebridge"
    android:padding="@dimen/dimen_20dp"
    android:id="@+id/nestedScrollView"
    tools:context=".LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="@dimen/dimen_40dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmaillogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:inputType="text"
                android:drawableRight="@drawable/ic_person"
                android:maxLines="1"
                android:textColor="@color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white">
            <!--app:passwordToggleEnabled="true"-->
            <!--app:passwordToggleTint="@color/white">-->
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPasswordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:backgroundTint="@color/white"
                android:drawableTint="@color/white"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutcheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <CheckBox
                android:id="@+id/ch_rememberme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remember me"
                android:backgroundTint="#FFFFFF"
                android:textColor="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="30dp"
            android:id="@+id/appCompatButtonLogin"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:background="@null"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:text="@string/no_account_yet_create_one"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>